Fix T37777: layout.column_flow() not working correct with retina / DPI.